syntax = "proto3";
package robot.alert;
option go_package = "github.com/Duke1616/alertmanager-wechat-robot/apps/alert";

import "common/pb/github.com/infraboard/mcube/pb/page/page.proto";
import public "google/protobuf/timestamp.proto";
import public "google/protobuf/Empty.proto";
import "apps/policy/pb/policy.proto";

service RPC {
  // 保存报警信息
  rpc SaveAlertInformation(SaveAlertRequest) returns(SaveAlertResponse);
  // 查询报警历史信息
  rpc QueryAlertInformation(QueryAlertRequest) returns(AlertInformationSet);
}

message AlertInformation {
  // 告警类型
  // @gotags: bson:"type" json:"type"
  string type = 1;
  // 告警来源
  // @gotags: bson:"source" json:"source"
  string source = 2;
  // 服务名称
  // @gotags: bson:"service_name" json:"service_name"
  string service_name = 3;
  // 告警级别
  // @gotags: bson:"level" json:"level"
  string level = 4;
  // 告警名称
  // @gotags: bson:"alert_name" json:"alert_name"
  string alert_name = 5;
  // 告警主机
  // @gotags: bson:"instance_name" json:"instance_name"
  string instance_name = 6;
  // 告警详情
  // @gotags: bson:"description" json:"description"
  string description = 7;
  // 接收群组
  // @gotags: bson:"target_name" json:"target_name"
  string target_name = 8;
  // 通知人
  // @gotags: bson:"others" json:"others"
  string others = 9;
  // 告警时间
  // @gotags: bson:"start_at" json:"start_at"
  int64 start_at = 10;
  // 恢复时间
  // @gotags: bson:"end_at" json:"end_at"
  int64 end_at = 11;
  // 告警通知时间
  // @gotags: bson:"notification_at" json:"notification_at"
  int64 notification_at = 12;
}


message AlertInformationSet {
  // 总数量
  // @gotags: bson:"total" json:"total"
  int64 total = 1;
  // 数据
  // @gotags: bson:"items" json:"items"
  repeated AlertInformation items = 2;
}

message SaveAlertRequest {
  // 报警群组
  // @gotags: bson:"target_name" json:"target_name"
  string target_name = 1;
  // 告警组合信息
  // @gotags: bson:"alerts" json:"alerts"
  repeated Alert alerts = 2;
  // 告警通知人
  // @gotags: bson:"mention" json:"mention"
  policy.Mention mention = 3;
}

message SaveAlertResponse {
  // @gotags: json:"message"
  string message = 1;
}


message Alert {
  // 定义警报是已解决还是正在触发
  // @gotags: bson:"status" json:"status"
  string status = 1;
  // 标签
  // @gotags: bson:"labels" json:"labels"
  map<string, string> labels = 2;
  // 注释
  // @gotags: bson:"annotations" json:"annotations"
  map<string, string> annotations = 3;
  // 开始时间
  // @gotags: bson:"startsAt" json:"startsAt"
  optional google.protobuf.Timestamp starts_at = 4;
  // 结束时间
  // @gotags: bson:"endsAt" json:"endsAt"
  optional google.protobuf.Timestamp ends_at = 5;
  // 标识此警报的引起实体的反向链接
  // @gotags: bson:"generatorURL" json:"generatorURL"
  optional string generatorURL = 6;
  // 可用于识别警报的指纹
  // @gotags: bson:"fingerprint" json:"fingerprint"
  optional string fingerprint = 7;
}


message QueryAlertRequest {
  // 分页参数
  // @gotags: json:"page"
  infraboard.mcube.page.PageRequest page = 1;
  // 告警类型
  // @gotags: json:"type"
  string type = 2;
  // 告警服务
  // @gotags: json:"service_name"
  string service_name = 3;
  // 告警级别
  // @gotags: json:"level"
  string level = 4;
  // 告警实例
  // @gotags: json:"instance_name"
  string instance_name = 5;
  // 告警群组
  // @gotags: json:"target_name"
  string target_name = 6;
  // 告警通知人
  // @gotags: json:"others"
  string others = 7;
  // 告警通知人
  // @gotags: json:"alert_name"
  string alert_name = 8;
}