syntax = "proto3";
package robot.policy;
option go_package = "github.com/Duke1616/alertmanager-wechat-robot/apps/policy";

enum CREATE_TYPE {
  // 用户创建
  USER = 0;
  // 系统创建
  SYSTEM = 1;
}

// 单选创建单条规则
// 联合类型 = 用户创建 + 系统创建
// 指定类型 = 联合类型 + 报警名称

enum POLICY_TYPE {
  // 创建
  RADIO = 0;
  // 联合类型
  JOIN = 1;
  // 指定类型
  APPOINT = 2;
}

enum ACTIVE {
  NEWS = 0;
  // 状态转换
  STATUS_TRANS = 1;
  // 丢弃报警
  DROP = 2;
  // 跳过
  SKIP = 3;
}

enum LABEL_TYPE {
  // 组策略标签匹配
  GROUP = 0;
  // 全局配置标签匹配
  COMMON = 1;
}

message Policy {
  // policy ID
  // @gotags: bson:"_id" json:"id"
  string id = 1;
  // 是否开启
  // @gotags: bson:"enabled" json:"enabled"
  bool enabled = 2;
  // 创建时间
  // @gotags: bson:"create_at" json:"create_at"
  int64 create_at = 3;
  // 创建时间
  // @gotags: bson:"update_at" json:"update_at"
  int64 update_at = 4;
  // 关联target_name
  // @gotags: bson:"target_name" json:"target_name" validate:"required,lte=64"
  string target_name = 5;
  // 创建信息
  // @gotags: bson:"spec" json:"spec"
  CreatePolicyRequest spec = 6;
  // 父亲ID
  // @gotags: bson:"parent_id" json:"parent_id"
  repeated string parent_id = 7;
}

message PolicySet {
  // 总数量
  // @gotags: bson:"total" json:"total"
  int64 total = 1;
  // 数据
  // @gotags: bson:"items" json:"items"
  repeated Policy items = 2;
}

message CreatePolicyRequest {
  // 策略名称
  // @gotags: bson:"name" json:"name"
  string name = 1;
  // 关联告警目标
  // @gotags: bson:"target_id" json:"target_id" validate:"required,lte=64"
  string target_id = 2;
  // 规则所属域
  // @gotags: bson:"domain" json:"domain"
  string domain = 3;
  // 规则所属域
  // @gotags: bson:"namespace" json:"namespace"
  string namespace = 4;
  // 匹配标签
  // @gotags: bson:"tags" json:"tags"
  repeated Tag tags = 5;
  // 策略类型
  // @gotags: bson:"policy_type" json:"policy_type"
  POLICY_TYPE policy_type = 6;
  // 动作
  // @gotags: bson:"active" json:"active"
  ACTIVE active = 7;
  // 描述
  // @gotags: bson:"description" json:"description"
  string description = 8;
  // 优先级，不填写自动计算，100为最高，以关联层数为条件
  // @gotags: bson:"priority" json:"priority"
  int64 priority = 9;
  // @其他人
  // @gotags: bson:"mention" json:"mention"
  Mention mention = 10;
  // 联合ID
  // @gotags: bson:"-" json:"ids"
  repeated string ids = 11;
  // 联合系统ID
  // @gotags: bson:"-" json:"join_id"
  string join_id = 12;
  // 策略创建方式
  // @gotags: bson:"create_type" json:"create_type"
  CREATE_TYPE create_type = 13;
  // 是否创建filter
  // @gotags: bson:"-" json:"is_filter"
  bool is_filter  = 14;
  // 过滤名称
  // @gotags: bson:"filter_name" json:"filter_name"
  string filter_name  = 15;
}

message Tag {
  // 标签类型
  // @gotags: bson:"label_type" json:"label_type"
  LABEL_TYPE label_type = 1;
  // 匹配标签
  // @gotags: bson:"label" json:"label" validate:"required,lte=64"
  string label = 2;
  // 匹配值
  // @gotags: bson:"value" json:"value"
  string value = 3;
}

// 提到的人
message Mention {
  // 是否通知所有人
  // @gotags: bson:"all" json:"all"
  bool all = 1;
  // 通知指定用户
  // @gotags: bson:"user_ids" json:"user_ids"
  repeated string user_ids = 2;
  // 通知指定用户
  // @gotags: bson:"users" json:"users"
  repeated string users = 3;
}
